# audio-plugin-web-ui

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md
CMake/: Findchoc.cmake  Findclap-juce-extensions.cmake  Findjuce.cmake
Plugins/: CMakeLists.txt
Plugins/DenoGain/: CMakeLists.txt
Plugins/DenoGain/Source/: PluginEditor.cpp  PluginEditor.h
Plugins/DenoGain/WebView/vite-project/: .gitignore
Plugins/DenoGain/WebView/vite-project/src/: App.svelte  main.ts  style.css
Plugins/DenoGain/WebView/vite-project/src/lib/: ParameterController.svelte
Plugins/Experimental/p5js-synth/: CMakeLists.txt
Plugins/Experimental/p5js-synth/Source/: PluginEditor.cpp
Plugins/Experimental/p5js-synth/WebView/: view.html
Plugins/Experimental/threejs-synth/: CMakeLists.txt
Plugins/Experimental/threejs-synth/Source/: PluginEditor.h
Plugins/ReactSynth/: CMakeLists.txt
Plugins/ReactSynth/Source/: ChocSynthesizer.cpp  JuceDemoSynthesizer.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/ReactSynth/WebView/: build-webview-bundle.ts
Plugins/ReactSynth/WebView/vite-project/: index.html  package-lock.json  package.json
Plugins/ReactSynth/WebView/vite-project/src/: App.tsx
Plugins/ReactSynth/WebView/vite-project/src/components/: GainKnob.tsx  MidiKeyboard.tsx
Plugins/ReactSynth/WebView/vite-project/src/native_bridges/: useWindowFunction.ts
Plugins/SocketGain/: CMakeLists.txt
Plugins/SocketGain/Source/: PluginEditor.cpp
Plugins/SocketGain/WebView/: socket-server.ts
Plugins/SocketGain/WebView/vite-project/: package-lock.json  package.json
Plugins/SocketGain/WebView/vite-project/src/: App.tsx  socket.js
Plugins/SocketGain/WebView/vite-project/src/components/: MyForm.jsx
Plugins/ThreeSynth/: CMakeLists.txt
Plugins/ThreeSynth/Source/: ChocSynthesizer.h  JuceDemoSynthesizer.h  PluginEditor.cpp  PluginEditor.h
Plugins/ThreeSynth/WebView/vite-project/: package-lock.json  package.json
Plugins/ThreeSynth/WebView/vite-project/src/: App.css  App.tsx
Plugins/ThreeSynth/WebView/vite-project/src/components/: Cube.tsx
Plugins/UnitySynth/: CMakeLists.txt
Plugins/UnitySynth/Source/: ChocSynthesizer.cpp  PluginEditor.cpp
Plugins/UnitySynth/WebView/: build-webview-bundle.ts
Plugins/UnitySynth/WebView/vite-project/: package-lock.json  package.json
Plugins/UnitySynth/WebView/vite-project/public/unity/: builds.framework.js  builds.loader.js
Plugins/UnitySynth/WebView/vite-project/public/unity-binary/: builds.framework.js  builds.loader.js
Plugins/UnitySynth/WebView/vite-project/src/: App.css  App.tsx  unity-test.tsx
Plugins/WebGain/: CMakeLists.txt
Plugins/WebGain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
Plugins/WebGain/WebView/: view.html
Plugins/WebVisualizer/: CMakeLists.txt
Plugins/WebVisualizer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/WebVisualizer/WebView/: server.ts  view.html
Plugins/p5js-synth/: CMakeLists.txt
Plugins/threejs-synth/: CMakeLists.txt
Plugins/threejs-synth/WebView/: view.html
Scripts/: build_linux_ninja.sh  build_macos_xcode.sh  build_windows_msvc2022.bat  install_windows_msvc2022_clap.bat  install_windows_msvc2022_vst3.bat
Scripts/deno/: build-all.ts  build-plugins.ts  build-webview-bundles.ts  build-with-cmake.ts  install-clap-with-cmake.ts  install-vst3-with-cmake.ts
Scripts/deno/details/: build-plugins.ts  build-webview-bundles.ts
Tools/deno/: install-clap-with-cmake.ts  install-vst3-with-cmake.ts  mc-zip.ts
